# dividend-rebalance-planner

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: dividends.csv  holdings.csv  targets.csv
src/dividend_rebalance_planner/: __init__.py  cli.py  io_utils.py  models.py  planner.py  reports.py
tests/: test_cli.py  test_io_utils.py  test_planner.py  test_reports.py
